--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.20.0",
@@ -15,23 +13,25 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.19",
     "prettier": "^2.5.1",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "typescript": "^4.7.4"
+    "prettier-plugin-organize-imports": "^2.3.4"
   },
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "srv": "nodemon src/server.ts"
+    "dev": "nodemon ./src/server.ts",
+    "prod": "ts-node --transpile-only ./src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/tmp": "^0.2.3",
     "express": "^4.18.1",
     "hummus-recipe": "github:easyTree/hummusRecipe#df0d65422ce0001f219ecd859e651d76056a691f",
     "muhammara": "^3.0.0",
-    "nodemon": "^2.0.19",
     "tmp": "^0.2.1",
-    "ts-node": "^10.8.2"
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
