--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/response-time": "^2.3.5",
     "@types/tmp": "^0.2.3",
     "express": "^4.18.1",
     "hummus-recipe": "github:easyTree/hummusRecipe#df0d65422ce0001f219ecd859e651d76056a691f",
     "muhammara": "^3.0.0",
+    "response-time": "^2.3.2",
     "tmp": "^0.2.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
