--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^2.0.19",
     "prettier": "^2.5.1",
     "prettier-plugin-organize-imports": "^2.3.4"
   },
   "scripts": {
-    "devprev": "nodemon ./src/server.ts",
-    "clean": "rmdir ./build",
-    "build": "npm run clean && tsc",
-    "dev": "npm run build && skaffold dev --port-forward",
+    "container_dev": "nodemon ./src/server.ts",
+    "clean": "./infra/batch/del-build-folder-if-exists.bat",
+    "dev": "skaffold dev --port-forward",
     "prod": "ts-node --transpile-only ./src/server.ts"
   },
   "engines": {
@@ -32,12 +30,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/response-time": "^2.3.5",
     "@types/tmp": "^0.2.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "hummus-recipe": "github:easyTree/hummusRecipe#df0d65422ce0001f219ecd859e651d76056a691f",
     "muhammara": "^3.0.0",
+    "nodemon": "^2.0.19",
     "response-time": "^2.3.2",
     "tmp": "^0.2.1",
     "ts-node": "^10.8.2",
